[package]
name = "dino-park-packs"
version = "0.5.0"
authors = ["Florian Merz <flomerz@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dino-park-packs"
path = "src/main.rs"

[features]
default = []
local = ["dino_park_gate/localuserscope"]

[dependencies]
cis_client = { git = "https://github.com/mozilla-iam/cis_client-rust", branch = "0.9", version = "0.9" }
cis_profile = { git = "https://github.com/mozilla-iam/cis_profile-rust", branch = "0.6", version = "0.6", features = ["aws", "vendored"] }
dino_park_gate = { git = "https://github.com/mozilla-iam/dino-park-gate", branch = "0.10", version = "0.10" }
dino_park_guard = { git = "https://github.com/mozilla-iam/dino-park-guard", branch = "0.5", version = "0.5" }
dino_park_trust = { git = "https://github.com/mozilla-iam/dino-park-trust", branch = "0.1", version = "0.1" }
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono", "serde_json"] }
diesel_migrations = "1.4"
actix-web = "4.0.0-beta.3"
actix-http = "3.0.0-beta.3"
actix-rt = "2"
actix-multipart = "0.4.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.8"
failure = "0.1"
failure_derive = "0.1"
diesel-derive-enum = { version = "1", features = ["postgres"] }
futures = "0.3"
r2d2 = "0.8"
config = "0.10"
chrono = "0.4"
rusoto_core = "0.46"
rusoto_ses = "0.46"
lazy_static = "1.4"
csv = "1.1"
basket = "0.0.4"
url = { version = "2", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v5"] }
base64 = "0.13"